# quorai

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  run_backtest.py
.github/workflows/: ci.yml  pages.yml
docs/: app.js  backtest-output.md  flow.json  index.html  math.md  robots.txt  sitemap.xml  style.css
experiments/: run_scenarios.py  seed_sec_fundamentals.py
experiments/results/: eval-2026-05-20.md
scripts/: build_site.py
src/: __init__.py  config.py  live_trading.py  main.py  risk_profiles.py
src/agents/: _data_bundle.py  _prompts.py  _signals.py  aswath_damodaran.py  ben_graham.py  bill_ackman.py  cathie_wood.py  charlie_munger.py  cliff_asness.py  debate_node.py  ed_seykota.py  fundamentals.py  growth_agent.py  howard_marks.py  jim_simons.py  joel_greenblatt.py  michael_burry.py  mohnish_pabrai.py  nassim_taleb.py  news_sentiment.py  peter_lynch.py  phil_fisher.py  portfolio_manager.py  rakesh_jhunjhunwala.py  ray_dalio.py  risk_manager.py  sentiment.py  stanley_druckenmiller.py  technicals.py  valuation.py  warren_buffett.py
src/backtesting/: __init__.py  attribution.py  benchmarks.py  cli.py  comparison.py  controller.py  costs.py  engine.py  metrics.py  output.py  portfolio.py  signal_log.py  trader.py  types.py  valuation.py
src/broker/: __init__.py  alpaca_client.py  portfolio_adapter.py
src/cli/: input.py
src/data/: backtest_store.py  cache.py  models.py  sec_store.py
src/feedback/: __init__.py  labeler.py  loader.py  scorer.py
src/graph/: state.py
src/live/: audit_journal.py  executor.py  idempotency_guard.py  reconciler.py  risk_gate.py  runner.py  sod_equity.py
src/llm/: api_models.json  models.py  request.py
src/mcp_server/: schemas.py  server.py  tools.py
src/notifications/: command_store.py  telegram.py
src/orchestration/: __init__.py  preflight.py  price_feed.py
src/regime/: __init__.py  classifier.py  policy.py
src/tools/: _sec_edgar.py  _sec_fundamentals.py  _yfinance_fundamentals.py  api.py
src/utils/: analysts.py  api_key.py  atomic_io.py  concurrency.py  display.py  llm.py  progress.py  signal_quality.py  tz.py  validation.py
tests/: conftest.py  test_analysts_registry.py  test_api_rate_limiting.py  test_cache.py  test_comparison.py  test_debate_node_groups.py  test_forward_labeler.py  test_regime_classifier.py  test_regime_classifier_nan.py  test_regime_policy.py  test_risk_profiles.py  test_rolling_scorer.py  test_signal_sink.py  test_token_telemetry.py
tests/agents/: test_buffett_pricing_power.py  test_cathie_wood_payout.py  test_cathie_wood_rd_zero_revenue.py  test_charlie_munger_zero_revenue.py  test_damodaran_dcf_compounding.py  test_damodaran_equity_value.py  test_debate_node_robustness.py  test_fundamentals_zero_is_valid.py  test_growth_agent_none_shares.py  test_jhunjhunwala_consistency.py  test_jhunjhunwala_loss_year.py  test_jim_simons_acf_ranking.py  test_jim_simons_hurst_error.py  test_munger_mos_key.py  test_news_sentiment.py  test_portfolio_manager.py  test_portfolio_manager_pool_drain.py  test_portfolio_manager_regime_gate.py  test_risk_manager.py  test_risk_manager_profile.py  test_risk_manager_short_margin_sizing.py  test_sentiment.py  test_state_messages_reducer.py  test_technicals_adx_isolation.py  test_technicals_hurst.py  test_technicals_rsi_flat.py  test_technicals_thin_series.py  test_valuation_capex_sign.py  test_valuation_residual_income.py  test_valuation_zero_market_cap.py  test_warren_buffett_max_score.py
tests/backtesting/: conftest.py  test_attribution.py  test_benchmarks.py  test_cli.py  test_comparison.py  test_controller.py  test_costs.py  test_engine.py  test_engine_lookback.py  test_engine_recent_trades.py  test_execution.py  test_metrics.py  test_portfolio.py  test_portfolio_short_margin.py  test_preflight.py  test_results.py  test_signal_log_append.py  (+1 more)
(+51 files in other folders)
