[project]
name = "quorai"
version = "1.0.0"
description = "Quorai — a quorum of AI agents deliberating trading decisions."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Nils Flaschel", email = "n.flaschel@gmail.com" }
]
license = { text = "MIT" }
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
dependencies = [
    "langchain>=0.3.7",
    "langchain-anthropic==0.3.5",
    "langchain-groq==0.2.3",
    "langchain-openai>=0.3.5",
    "langchain-deepseek>=0.1.2",
    "langgraph==0.2.56",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "python-dotenv==1.0.0",
    "matplotlib>=3.9.2",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "questionary>=2.1.0",
    "rich>=13.9.4",
    "langchain-google-genai>=2.0.11",
    "fastapi[standard]>=0.104.0",
    "fastapi-cli>=0.0.7",
    "pydantic>=2.4.2",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.22",
    "alembic>=1.12.0",
    "langchain-gigachat>=0.3.12",
    "langchain-xai>=0.2.5",
    "scipy>=1.11.0",
    "yfinance>=0.2.0",
    "alpaca-py>=0.30",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
backtester = "src.backtesting.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.9.0",
    "mypy>=1.9.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "types-python-dateutil>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 320
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/agents/cathie_wood.py" = ["E501"]
"src/agents/phil_fisher.py" = ["E501"]
"src/agents/stanley_druckenmiller.py" = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.agents.*", "src.backtester", "run_backtest"]
ignore_errors = true
